# ffmpeg-for

./: pyproject.toml
ffmpeg_for/: ffmpeg_for.py  util.py
