[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-for"
description = "A python script that sequentially executes ffmpeg on multiple input files."
version = "0.1.1"
authors = [{ name = "Yusnked", email = "yusnked@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]


[project.scripts]
ffmpeg-for = "ffmpeg_for.ffmpeg_for:main"
